[package]
name = "booru-rs"
version = "0.2.5"
edition = "2021"
description = "An async Booru client for Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/booru-rs"
repository = "https://github.com/ajiiisai/booru-rs"
readme = "README.md"

[features]
# TODO
# async = []
gelbooru = []
danbooru = []

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
serde = { version = "1.0.147", features = ["derive"] }
