[package]
name = "booru-rs"
version = "0.2.5"
edition = "2021"
description = "An async Booru client for Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/booru-rs"
repository = "https://github.com/ajiiisai/booru-rs"
readme = "README.md"

[features]
# TODO
# async = []
gelbooru = []
danbooru = []
moebooru = []


[dependencies]
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.94"

[dev-dependencies]
# For mocking server
mockito = {version = "1.0.0"}
#test-helpers = { git = "https://github.com/Apkawa/rust-test-helpers.git" }
test-helpers = { path = "../test_helpers" }
